--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        REACT_APP_API_URL: http://localhost:3001
+        REACT_APP_API_URL: http://backend:3001
     image: mediavault-frontend:latest
     container_name: mediavault-frontend
     restart: unless-stopped
@@ -78,6 +78,8 @@ services:
       - backend
     networks:
       - internal
+    ports:
+      - "3000:3000"
 
 # # Nginx to serve everything on one port
 # nginx:
