--- a/env.example
+++ b/env.example
@@ -2,22 +2,29 @@
 DB_USER=mediavault
 DB_PASSWORD=
 POSTGRES_DB=mediavault
+DATABASE_SSL=false
 
 # Redis Configuration
 REDIS_PASSWORD=
 
 # JWT Configuration
 JWT_SECRET=
+INTEGRATION_ENCRYPTION_KEY=
 
 # TMDB API Configuration
 # Get your API key from https://www.themoviedb.org/settings/api
+TMDB_PRESET=tmdb
+TMDB_PROVIDER=tmdb
+TMDB_API_URL=https://api.themoviedb.org/3/search/movie
 TMDB_API_KEY=
+TMDB_API_KEY_HEADER=
+TMDB_API_KEY_QUERY_PARAM=api_key
 
 # CORS Configuration
-ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
 # Frontend Configuration
-REACT_APP_API_URL=https://collect.krewson.org
+REACT_APP_API_URL=/api
 
 # Production/Development
 NODE_ENV=production
@@ -39,8 +46,17 @@ S3_REGION=us-east-1
 
 # Optional: Image Recognition API
 # For cover art recognition
+VISION_PRESET=ocrspace
+VISION_PROVIDER=ocrspace
+VISION_API_URL=https://api.ocr.space/parse/image
 VISION_API_KEY=your_vision_api_key_here
+VISION_API_KEY_HEADER=apikey
 
 # Optional: Barcode/UPC API
 # For UPC scanning
+BARCODE_PRESET=upcitemdb
+BARCODE_PROVIDER=upcitemdb
+BARCODE_API_URL=https://api.upcitemdb.com/prod/trial/lookup
 BARCODE_API_KEY=your_barcode_api_key_here
+BARCODE_API_KEY_HEADER=x-api-key
+BARCODE_QUERY_PARAM=upc
