--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
