--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,13 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+ARG APP_VERSION=1.6.2
+ARG GIT_SHA=dev
+ARG BUILD_DATE=unknown
+ENV APP_VERSION=$APP_VERSION
+ENV GIT_SHA=$GIT_SHA
+ENV BUILD_DATE=$BUILD_DATE
+
 COPY package*.json ./
 RUN npm install --production
 
