--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,10 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+      args:
+        APP_VERSION: ${APP_VERSION:-1.6.2}
+        GIT_SHA: ${GIT_SHA:-dev}
+        BUILD_DATE: ${BUILD_DATE:-unknown}
     image: mediavault-backend:latest
     container_name: mediavault-backend
     restart: unless-stopped
@@ -66,6 +70,9 @@ services:
       VISION_API_KEY: ${VISION_API_KEY}
       VISION_API_KEY_HEADER: ${VISION_API_KEY_HEADER:-apikey}
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-http://localhost:3000,http://127.0.0.1:3000}
+      APP_VERSION: ${APP_VERSION:-1.6.2}
+      GIT_SHA: ${GIT_SHA:-dev}
+      BUILD_DATE: ${BUILD_DATE:-unknown}
     volumes:
       - media_uploads:/app/uploads
     depends_on:
@@ -87,6 +94,9 @@ services:
       dockerfile: Dockerfile
       args:
         REACT_APP_API_URL: /api
+        REACT_APP_VERSION: ${APP_VERSION:-1.6.2}
+        REACT_APP_GIT_SHA: ${GIT_SHA:-dev}
+        REACT_APP_BUILD_DATE: ${BUILD_DATE:-unknown}
     image: mediavault-frontend:latest
     container_name: mediavault-frontend
     restart: unless-stopped
