--- a/env.example
+++ b/env.example
@@ -26,6 +26,13 @@ ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 # Frontend Configuration
 REACT_APP_API_URL=/api
 
+# Build metadata (optional, recommended for version display)
+# APP_VERSION should match frontend/backend package.json version.
+APP_VERSION=1.6.2
+# Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
+GIT_SHA=dev
+BUILD_DATE=unknown
+
 # Production/Development
 NODE_ENV=production
 
