--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,11 @@ services:
       - internal
     ports:
       - "3000:3000"
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://127.0.0.1:3000/ || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 # # Nginx to serve everything on one port
 # nginx:
