--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,27 @@
 {
   "name": "mediavault-backend",
-  "version": "1.6.3",
-  "description": "MediaVault Backend API",
+  "version": "1.6.4",
+  "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
-    "connect-redis": "^7.1.0",
-    "redis": "^4.6.11",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
+    "form-data": "^4.0.0",
+    "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
-    "axios": "^1.6.2",
-    "form-data": "^4.0.0"
+    "redis": "^4.6.11",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
