--- a/env.example
+++ b/env.example
@@ -7,8 +7,8 @@ DATABASE_SSL=false
 # Redis Configuration
 REDIS_PASSWORD=
 
-# JWT Configuration
-JWT_SECRET=
+# Session Configuration
+SESSION_SECRET=
 INTEGRATION_ENCRYPTION_KEY=
 
 # TMDB API Configuration
@@ -28,13 +28,15 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.6.3
+APP_VERSION=1.6.4
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
 
 # Production/Development
 NODE_ENV=production
+# For HTTPS production set to true; keep false for local HTTP testing.
+SESSION_COOKIE_SECURE=false
 
 # Optional: Email Configuration (for invites)
 SMTP_HOST=smtp.example.com
