--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,17 @@
 {
   "name": "mediavault-frontend",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
-    "lucide-react": "^0.263.1"
+    "axios": "^1.6.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
