--- a/docker-compose.registry.yml
+++ b/docker-compose.registry.yml
@@ -34,7 +34,7 @@ services:
       retries: 5
 
   backend:
-    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-backend:${IMAGE_TAG:-1.6.4}
+    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-backend:${IMAGE_TAG:-1.6.5}
     container_name: mediavault-backend
     restart: unless-stopped
     environment:
@@ -44,6 +44,7 @@ services:
       DATABASE_SSL: ${DATABASE_SSL:-false}
       DATABASE_URL: postgresql://${DB_USER:-mediavault}:${DB_PASSWORD}@db:5432/${POSTGRES_DB:-mediavault}
       REDIS_URL: redis://default:${REDIS_PASSWORD}@redis:6379
+      AUDIT_LOG_MODE: ${AUDIT_LOG_MODE:-failures}
       SESSION_SECRET: ${SESSION_SECRET}
       INTEGRATION_ENCRYPTION_KEY: ${INTEGRATION_ENCRYPTION_KEY:-}
       TMDB_PRESET: ${TMDB_PRESET:-tmdb}
@@ -80,7 +81,7 @@ services:
       retries: 3
 
   frontend:
-    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-frontend:${IMAGE_TAG:-1.6.4}
+    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-frontend:${IMAGE_TAG:-1.6.5}
     container_name: mediavault-frontend
     restart: unless-stopped
     depends_on:
