--- a/env.example
+++ b/env.example
@@ -7,6 +7,13 @@ DATABASE_SSL=false
 # Redis Configuration
 REDIS_PASSWORD=
 
+# Audit logging mode
+# off       = no request-level audit logs
+# failures  = log failed API requests only (recommended default)
+# mutations = log mutating API requests + failures
+# all       = log all API requests
+AUDIT_LOG_MODE=failures
+
 # Session Configuration
 SESSION_SECRET=
 INTEGRATION_ENCRYPTION_KEY=
@@ -28,7 +35,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.6.4
+APP_VERSION=1.6.5
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
