--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -58,9 +58,57 @@ jobs:
         run: |
           echo "owner_lc=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_OUTPUT"
 
-  backend:
+  migration-check:
     runs-on: ubuntu-latest
     needs: prepare
+    services:
+      postgres:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: collectz_ci
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres -d collectz_ci"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: backend/package-lock.json
+
+      - name: Install backend deps
+        working-directory: backend
+        run: npm ci
+
+      - name: Run migrations
+        working-directory: backend
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/collectz_ci
+          DATABASE_SSL: "false"
+        run: |
+          node -e "const {runMigrations}=require('./db/migrations'); const pool=require('./db/pool'); (async()=>{await runMigrations(); await pool.end();})().catch(async (e)=>{console.error(e); try{await pool.end();}catch{} process.exit(1);});"
+
+      - name: Verify critical schema columns
+        working-directory: backend
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/collectz_ci
+          DATABASE_SSL: "false"
+        run: |
+          node -e "const pool=require('./db/pool'); (async()=>{const checks=[['app_integrations','plex_api_url'],['app_integrations','plex_library_sections'],['invites','revoked'],['invites','used_by']]; for (const [table,column] of checks){const r=await pool.query('SELECT 1 FROM information_schema.columns WHERE table_name = $1 AND column_name = $2',[table,column]); if (r.rows.length===0){throw new Error('Missing '+table+'.'+column);} } await pool.end();})().catch(async(e)=>{console.error(e); try{await pool.end();}catch{} process.exit(1);});"
+
+  backend:
+    runs-on: ubuntu-latest
+    needs: [prepare, migration-check]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -103,7 +151,7 @@ jobs:
 
   frontend:
     runs-on: ubuntu-latest
-    needs: prepare
+    needs: [prepare, migration-check]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
