--- a/docker-compose.registry.yml
+++ b/docker-compose.registry.yml
@@ -34,7 +34,7 @@ services:
       retries: 5
 
   backend:
-    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-backend:${IMAGE_TAG:-1.6.5-r1}
+    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-backend:${IMAGE_TAG:-1.7.1}
     container_name: mediavault-backend
     restart: unless-stopped
     environment:
@@ -64,6 +64,11 @@ services:
       VISION_API_URL: ${VISION_API_URL:-https://api.ocr.space/parse/image}
       VISION_API_KEY: ${VISION_API_KEY}
       VISION_API_KEY_HEADER: ${VISION_API_KEY_HEADER:-apikey}
+      PLEX_PRESET: ${PLEX_PRESET:-plex}
+      PLEX_PROVIDER: ${PLEX_PROVIDER:-plex}
+      PLEX_API_URL: ${PLEX_API_URL:-}
+      PLEX_SERVER_NAME: ${PLEX_SERVER_NAME:-}
+      PLEX_API_KEY: ${PLEX_API_KEY:-}
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-http://localhost:3000,http://127.0.0.1:3000}
     volumes:
       - media_uploads:/app/uploads
@@ -81,7 +86,7 @@ services:
       retries: 3
 
   frontend:
-    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-frontend:${IMAGE_TAG:-1.6.5-r1}
+    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-frontend:${IMAGE_TAG:-1.7.1}
     container_name: mediavault-frontend
     restart: unless-stopped
     depends_on:
