--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
       args:
-        APP_VERSION: ${APP_VERSION:-1.6.6}
+        APP_VERSION: ${APP_VERSION:-1.7.1}
         GIT_SHA: ${GIT_SHA:-dev}
         BUILD_DATE: ${BUILD_DATE:-unknown}
     image: mediavault-backend:latest
@@ -71,8 +71,13 @@ services:
       VISION_API_URL: ${VISION_API_URL:-https://api.ocr.space/parse/image}
       VISION_API_KEY: ${VISION_API_KEY}
       VISION_API_KEY_HEADER: ${VISION_API_KEY_HEADER:-apikey}
+      PLEX_PRESET: ${PLEX_PRESET:-plex}
+      PLEX_PROVIDER: ${PLEX_PROVIDER:-plex}
+      PLEX_API_URL: ${PLEX_API_URL:-}
+      PLEX_SERVER_NAME: ${PLEX_SERVER_NAME:-}
+      PLEX_API_KEY: ${PLEX_API_KEY:-}
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-http://localhost:3000,http://127.0.0.1:3000}
-      APP_VERSION: ${APP_VERSION:-1.6.6}
+      APP_VERSION: ${APP_VERSION:-1.7.1}
       GIT_SHA: ${GIT_SHA:-dev}
       BUILD_DATE: ${BUILD_DATE:-unknown}
     volumes:
@@ -96,7 +101,7 @@ services:
       dockerfile: Dockerfile
       args:
         REACT_APP_API_URL: /api
-        REACT_APP_VERSION: ${APP_VERSION:-1.6.6}
+        REACT_APP_VERSION: ${APP_VERSION:-1.7.1}
         REACT_APP_GIT_SHA: ${GIT_SHA:-dev}
         REACT_APP_BUILD_DATE: ${BUILD_DATE:-unknown}
     image: mediavault-frontend:latest
