--- a/env.example
+++ b/env.example
@@ -35,7 +35,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.6.5-r1
+APP_VERSION=1.7.1
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
@@ -76,3 +76,10 @@ BARCODE_API_URL=https://api.upcitemdb.com/prod/trial/lookup
 BARCODE_API_KEY=your_barcode_api_key_here
 BARCODE_API_KEY_HEADER=x-api-key
 BARCODE_QUERY_PARAM=upc
+
+# Optional: Plex API (manual import)
+PLEX_PRESET=plex
+PLEX_PROVIDER=plex
+PLEX_API_URL=
+PLEX_SERVER_NAME=
+PLEX_API_KEY=
