Add object storage option

--- a/env.example
+++ b/env.example
@@ -52,13 +52,22 @@ SMTP_USER=your_email@example.com
 SMTP_PASSWORD=your_email_password
 SMTP_FROM=MediaVault <noreply@your-domain.com>
 
+# Storage Provider
+# local = filesystem under /uploads (default)
+# s3    = S3-compatible object storage
+STORAGE_PROVIDER=local
+
 # Optional: Object Storage (for media files)
+# Used when STORAGE_PROVIDER=s3
 # AWS S3 or compatible services
 S3_ENDPOINT=https://s3.amazonaws.com
 S3_BUCKET=mediavault-uploads
 S3_ACCESS_KEY_ID=your_access_key
 S3_SECRET_ACCESS_KEY=your_secret_key
 S3_REGION=us-east-1
+S3_FORCE_PATH_STYLE=true
+# Optional override for public URLs (e.g. CDN/custom domain)
+S3_PUBLIC_BASE_URL=
 
 # Optional: Image Recognition API
 # For cover art recognition
