--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.886.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.0",
