chore(1.9.2): enforce integration key hardening and bump version metadata

--- a/env.example
+++ b/env.example
@@ -35,7 +35,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.9.1
+APP_VERSION=1.9.2
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
@@ -44,6 +44,10 @@ BUILD_DATE=unknown
 NODE_ENV=production
 # For HTTPS production set to true; keep false for local HTTP testing.
 SESSION_COOKIE_SECURE=false
+# Reverse proxy trust (Express `trust proxy`):
+# - set to 1 when running behind exactly one proxy hop (common docker/nginx setup)
+# - set to false when accessing backend directly (no proxy)
+TRUST_PROXY=1
 
 # Optional: Email Configuration (for invites)
 SMTP_HOST=smtp.example.com
