--- a/docker-compose.registry.yml
+++ b/docker-compose.registry.yml
@@ -34,11 +34,12 @@ services:
       retries: 5
 
   backend:
-    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-backend:${IMAGE_TAG:-1.9.1}
+    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-backend:${IMAGE_TAG:-1.9.2}
     container_name: mediavault-backend
     restart: unless-stopped
     environment:
       NODE_ENV: production
+      TRUST_PROXY: ${TRUST_PROXY:-1}
       SESSION_COOKIE_SECURE: ${SESSION_COOKIE_SECURE:-false}
       PORT: 3001
       DATABASE_SSL: ${DATABASE_SSL:-false}
@@ -86,7 +87,7 @@ services:
       retries: 3
 
   frontend:
-    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-frontend:${IMAGE_TAG:-1.9.1}
+    image: ${IMAGE_REGISTRY:-ghcr.io}/${IMAGE_NAMESPACE:-hkrewson}/collectz-frontend:${IMAGE_TAG:-1.9.2}
     container_name: mediavault-frontend
     restart: unless-stopped
     depends_on:
