--- a/env.example
+++ b/env.example
@@ -35,7 +35,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.9.2
+APP_VERSION=1.9.3
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
@@ -96,3 +96,8 @@ PLEX_PROVIDER=plex
 PLEX_API_URL=
 PLEX_SERVER_NAME=
 PLEX_API_KEY=
+# Async Plex import tuning
+# Minimum delay between TMDB enrichment calls during Plex imports (milliseconds)
+TMDB_IMPORT_MIN_INTERVAL_MS=50
+# How often async job progress is persisted (items processed per update)
+PLEX_JOB_PROGRESS_BATCH_SIZE=25
