fix(import): add persistent global async import status (plex+csv), stop poll storms, and bump to v1.9.3-r1

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-ARG APP_VERSION=1.9.3
+ARG APP_VERSION=1.9.3-r1
 ARG GIT_SHA=dev
 ARG BUILD_DATE=unknown
 ENV APP_VERSION=$APP_VERSION
