--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
   "name": "mediavault-backend",
-  "version": "1.9.3-r1",
+  "version": "1.9.5-r1",
   "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test:csv-import": "node scripts/csv-parse-smoke.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.886.0",
@@ -13,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
+    "csv-parse": "^5.5.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
