--- a/env.example
+++ b/env.example
@@ -17,6 +17,10 @@ AUDIT_LOG_MODE=failures
 # Session Configuration
 SESSION_SECRET=
 INTEGRATION_ENCRYPTION_KEY=
+# Session policy
+SESSION_TTL_DAYS=7
+SESSION_MAX_PER_USER=10
+SESSION_CLEANUP_INTERVAL_MINUTES=60
 
 # TMDB API Configuration
 # Get your API key from https://www.themoviedb.org/settings/api
@@ -35,7 +39,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.9.3-r1
+APP_VERSION=1.9.5-r1
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
