--- a/env.example
+++ b/env.example
@@ -39,7 +39,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.9.6
+APP_VERSION=1.9.7
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
@@ -52,6 +52,15 @@ SESSION_COOKIE_SECURE=false
 # - set to 1 when running behind exactly one proxy hop (common docker/nginx setup)
 # - set to false when accessing backend directly (no proxy)
 TRUST_PROXY=1
+# Rate limiting (application-layer authoritative policy)
+RATE_LIMIT_WINDOW_MINUTES=15
+RATE_LIMIT_GLOBAL_MAX=600
+RATE_LIMIT_AUTH_MAX=20
+RATE_LIMIT_ADMIN_MAX=300
+RATE_LIMIT_MEDIA_READ_MAX=600
+RATE_LIMIT_MEDIA_WRITE_MAX=240
+RATE_LIMIT_IMPORT_START_MAX=60
+RATE_LIMIT_SYNC_POLL_MAX=600
 
 # Optional: Email Configuration (for invites)
 SMTP_HOST=smtp.example.com
