feat(1.9.8): operationalize feature flags with admin control, audit logging, runtime gating, and UI management

--- a/env.example
+++ b/env.example
@@ -39,7 +39,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.9.7
+APP_VERSION=1.9.8
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
@@ -61,6 +61,17 @@ RATE_LIMIT_MEDIA_READ_MAX=600
 RATE_LIMIT_MEDIA_WRITE_MAX=240
 RATE_LIMIT_IMPORT_START_MAX=60
 RATE_LIMIT_SYNC_POLL_MAX=600
+# Feature flag control plane
+# When true, admin flag updates are disabled and API is read-only for flags.
+FEATURE_FLAGS_READ_ONLY=false
+# Cache TTL for backend flag reads.
+FEATURE_FLAGS_CACHE_TTL_SECONDS=10
+# Optional per-flag env overrides (highest precedence)
+# FEATURE_FLAG_IMPORT_PLEX_ENABLED=true
+# FEATURE_FLAG_IMPORT_CSV_ENABLED=true
+# FEATURE_FLAG_TMDB_SEARCH_ENABLED=true
+# FEATURE_FLAG_LOOKUP_UPC_ENABLED=true
+# FEATURE_FLAG_RECOGNIZE_COVER_ENABLED=true
 
 # Optional: Email Configuration (for invites)
 SMTP_HOST=smtp.example.com
