--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -132,6 +132,25 @@ jobs:
           });
           NODE
 
+      - name: Run migration restore rehearsal
+        working-directory: backend
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/collectz_ci
+          MIGRATION_REHEARSAL_ADMIN_URL: postgresql://postgres:postgres@localhost:5432/postgres
+          DATABASE_SSL: "false"
+        run: |
+          BASELINE=$(node -e "const {MIGRATIONS}=require('./db/migrations'); const latest=Math.max(...MIGRATIONS.map(m=>m.version)); process.stdout.write(String(latest-1));")
+          echo "Using baseline migration version: ${BASELINE}"
+          MIGRATION_BASELINE_VERSION="${BASELINE}" \
+          MIGRATION_REHEARSAL_OUTPUT="artifacts/migration-rehearsal-evidence.json" \
+          npm run test:migration-rehearsal
+
+      - name: Upload migration rehearsal evidence
+        uses: actions/upload-artifact@v4
+        with:
+          name: migration-rehearsal-evidence
+          path: backend/artifacts/migration-rehearsal-evidence.json
+
   backend:
     runs-on: ubuntu-latest
     needs: [prepare, migration-check]
