--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,13 @@
 {
   "name": "mediavault-backend",
-  "version": "1.9.8",
+  "version": "1.9.9",
   "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test:csv-import": "node scripts/csv-parse-smoke.js"
+    "test:csv-import": "node scripts/csv-parse-smoke.js",
+    "test:migration-rehearsal": "node scripts/migration-rehearsal.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.886.0",
