--- a/env.example
+++ b/env.example
@@ -39,7 +39,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.9.9
+APP_VERSION=1.9.10
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
@@ -61,6 +61,7 @@ RATE_LIMIT_MEDIA_READ_MAX=600
 RATE_LIMIT_MEDIA_WRITE_MAX=240
 RATE_LIMIT_IMPORT_START_MAX=60
 RATE_LIMIT_SYNC_POLL_MAX=600
+RATE_LIMIT_EXTERNAL_API_MAX=30
 # Feature flag control plane
 # When true, admin flag updates are disabled and API is read-only for flags.
 FEATURE_FLAGS_READ_ONLY=false
