--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mediavault-backend",
-  "version": "1.9.10",
+  "version": "1.9.11",
   "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test:csv-import": "node scripts/csv-parse-smoke.js",
-    "test:migration-rehearsal": "node scripts/migration-rehearsal.js"
+    "test:migration-rehearsal": "node scripts/migration-rehearsal.js",
+    "test:init-parity": "node scripts/check-init-parity.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.886.0",
