fix(1.9.12): harden Plex JSON requests, make media patch ownership/scope atomic, and document feature-flag cache behavior in multi-instance setups

--- a/env.example
+++ b/env.example
@@ -39,7 +39,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.9.11
+APP_VERSION=1.9.12
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
@@ -67,6 +67,8 @@ RATE_LIMIT_EXTERNAL_API_MAX=30
 FEATURE_FLAGS_READ_ONLY=false
 # Cache TTL for backend flag reads.
 FEATURE_FLAGS_CACHE_TTL_SECONDS=10
+# In multi-backend deployments this cache is per-instance.
+# Flag changes propagate to other instances after their local TTL expires.
 # Optional per-flag env overrides (highest precedence)
 # FEATURE_FLAG_IMPORT_PLEX_ENABLED=true
 # FEATURE_FLAG_IMPORT_CSV_ENABLED=true
