--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -140,7 +140,8 @@ jobs:
               ['app_integrations', 'plex_library_sections'],
               ['invites', 'revoked'],
               ['invites', 'used_by'],
-              ['invites', 'token_hash']
+              ['invites', 'token_hash'],
+              ['password_reset_tokens', 'token_hash']
             ];
             for (const [table, column] of checks) {
               const r = await pool.query(
