--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -161,6 +161,20 @@ jobs:
             backend-audit.json
             frontend-audit.json
 
+  secret-scan:
+    runs-on: ubuntu-latest
+    needs: prepare
+    steps:
+      - name: Checkout (full history)
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Run secret scan (gitleaks)
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   migration-check:
     runs-on: ubuntu-latest
     needs: prepare
@@ -330,7 +344,7 @@ jobs:
 
   backend:
     runs-on: ubuntu-latest
-    needs: [prepare, migration-check, dependency-scan, compose-smoke]
+    needs: [prepare, migration-check, dependency-scan, secret-scan, compose-smoke]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -373,7 +387,7 @@ jobs:
 
   frontend:
     runs-on: ubuntu-latest
-    needs: [prepare, migration-check, dependency-scan, compose-smoke]
+    needs: [prepare, migration-check, dependency-scan, secret-scan, compose-smoke]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -470,7 +484,7 @@ jobs:
 
   auto-tag:
     runs-on: ubuntu-latest
-    needs: [prepare, migration-check, dependency-scan, compose-smoke, backend, frontend, image-security-and-sbom]
+    needs: [prepare, migration-check, dependency-scan, secret-scan, compose-smoke, backend, frontend, image-security-and-sbom]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout full history
