--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -360,9 +360,47 @@ jobs:
             exit 1
           fi
 
+  rbac-regression:
+    runs-on: ubuntu-latest
+    needs: [prepare, migration-check, compose-smoke]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build and start compose stack
+        env:
+          DB_PASSWORD: collectz_ci_db_password
+          SESSION_SECRET: collectz_ci_session_secret
+          INTEGRATION_ENCRYPTION_KEY: collectz_ci_encryption_key
+          APP_VERSION: ${{ needs.prepare.outputs.version }}
+          GIT_SHA: ${{ needs.prepare.outputs.git_sha_short }}
+          BUILD_DATE: ${{ needs.prepare.outputs.build_date }}
+          NODE_ENV: development
+          SESSION_COOKIE_SECURE: false
+          TRUST_PROXY: 1
+        run: |
+          set -euo pipefail
+          trap 'docker compose --env-file .env.ci down -v --remove-orphans' EXIT
+          cp env.example .env.ci
+          {
+            echo "DB_PASSWORD=${DB_PASSWORD}"
+            echo "SESSION_SECRET=${SESSION_SECRET}"
+            echo "INTEGRATION_ENCRYPTION_KEY=${INTEGRATION_ENCRYPTION_KEY}"
+            echo "APP_VERSION=${APP_VERSION}"
+            echo "GIT_SHA=${GIT_SHA}"
+            echo "BUILD_DATE=${BUILD_DATE}"
+            echo "NODE_ENV=${NODE_ENV}"
+            echo "SESSION_COOKIE_SECURE=${SESSION_COOKIE_SECURE}"
+            echo "TRUST_PROXY=${TRUST_PROXY}"
+          } >> .env.ci
+          docker compose --env-file .env.ci up -d --build
+          timeout 120 sh -c 'until [ "$(docker inspect -f "{{.State.Health.Status}}" mediavault-backend)" = "healthy" ]; do sleep 3; done'
+          timeout 120 sh -c 'until [ "$(docker inspect -f "{{.State.Health.Status}}" mediavault-frontend)" = "healthy" ]; do sleep 3; done'
+          docker compose --env-file .env.ci exec -T -e BASE_URL=http://frontend:3000 backend node scripts/rbac-regression-check.js
+
   backend:
     runs-on: ubuntu-latest
-    needs: [prepare, migration-check, dependency-scan, secret-scan, compose-smoke]
+    needs: [prepare, migration-check, dependency-scan, secret-scan, compose-smoke, rbac-regression]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -405,7 +443,7 @@ jobs:
 
   frontend:
     runs-on: ubuntu-latest
-    needs: [prepare, migration-check, dependency-scan, secret-scan, compose-smoke]
+    needs: [prepare, migration-check, dependency-scan, secret-scan, compose-smoke, rbac-regression]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -502,7 +540,7 @@ jobs:
 
   auto-tag:
     runs-on: ubuntu-latest
-    needs: [prepare, migration-check, dependency-scan, secret-scan, compose-smoke, backend, frontend, image-security-and-sbom]
+    needs: [prepare, migration-check, dependency-scan, secret-scan, compose-smoke, rbac-regression, backend, frontend, image-security-and-sbom]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout full history
