--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,13 @@
 {
   "name": "mediavault-backend",
-  "version": "1.9.22",
+  "version": "1.9.23",
   "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test:csv-import": "node scripts/csv-parse-smoke.js",
+    "test:rbac-regression": "node scripts/rbac-regression-check.js",
     "test:migration-rehearsal": "node scripts/migration-rehearsal.js",
     "test:init-parity": "node scripts/check-init-parity.js"
   },
