--- a/app-meta.json
+++ b/app-meta.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.9.29",
+  "version": "2.0.0-alpha.1",
   "build": {
     "gitShaDefault": "dev",
     "buildDateDefault": "unknown"
