chore(pre-beta): simplify library UX and align roadmap to homelab 2.0 scope
- remove sidebar library selector/manage popup controls
- remove Admin Members -> Libraries tab and library ownership management UI
- keep library internals in backend while hiding tenancy-oriented UX
- move deferred tenancy planning out of main roadmap and ignore local tenancy draft file
- update 2.0 roadmap milestones toward homelab-focused beta/rc path

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ nginx/ssl/*.crt
 
 # Keep example files
 !.env.example
+
+# Local planning docs (intentionally not tracked)
+docs/wiki/roadmap-tenancy-deferred.md
